Fix bug where arrowheads didn't align

--- a/src/css/_stage_river_crossing.scss
+++ b/src/css/_stage_river_crossing.scss
@@ -29,7 +29,7 @@
         &:before, &:after {
             position: absolute;
             content: '';
-            bottom: -0.7rem;
+            bottom: calc(var(--font-size) * -0.7);
             width: 0;
             height: 0;
             border-top: calc(var(--font-size) * 0.6) solid transparent;
